// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorStep should emit onBack 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div>
      <h1
        class="mb-8 text-lg font-bold md:text-4xl"
      >
        Custom error title
      </h1>
      <div
        class="my-4 mx-auto w-128"
      >
        <svg>
          mistake-banner.svg
        </svg>
      </div>
      <div
        class="my-8 text-md text-theme-secondary-text"
      >
        Custom error subtitle
      </div>
    </div>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="space-x-2 Button__StyledButton-mdtvtf-0 ePkfgQ"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should emit onRepeat 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div>
      <h1
        class="mb-8 text-lg font-bold md:text-4xl"
      >
        Custom error title
      </h1>
      <div
        class="my-4 mx-auto w-128"
      >
        <svg>
          mistake-banner.svg
        </svg>
      </div>
      <div
        class="my-8 text-md text-theme-secondary-text"
      >
        Custom error subtitle
      </div>
    </div>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="space-x-2 Button__StyledButton-mdtvtf-0 ePkfgQ"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with custom title and subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div>
      <h1
        class="mb-8 text-lg font-bold md:text-4xl"
      >
        Custom error title
      </h1>
      <div
        class="my-4 mx-auto w-128"
      >
        <svg>
          mistake-banner.svg
        </svg>
      </div>
      <div
        class="my-8 text-md text-theme-secondary-text"
      >
        Custom error subtitle
      </div>
    </div>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="space-x-2 Button__StyledButton-mdtvtf-0 ePkfgQ"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with default texts 1`] = `
<DocumentFragment>
  <div
    data-testid="ErrorStep"
  >
    <div>
      <h1
        class="mb-8 text-lg font-bold md:text-4xl"
      >
        Transaction Error
      </h1>
      <div
        class="my-4 mx-auto w-128"
      >
        <svg>
          mistake-banner.svg
        </svg>
      </div>
      <div
        class="my-8 text-md text-theme-secondary-text"
      >
        An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
      </div>
    </div>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="space-x-2 Button__StyledButton-mdtvtf-0 ePkfgQ"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
